# rust-wasm-example

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  envoy.yaml
k8s/: example.yaml
src/: lib.rs
