[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
log = "0.4.8"
proxy-wasm = "0.2.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
getrandom = "0.2"

[lib]
crate-type = ["cdylib"]